fix: add back in semantic monorepo extension

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "monorepo-semantic-example",
+  "private": true,
   "workspaces": [
     "packages/*"
   ],
-  "private": "true",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release": "semantic-release"
+    "release": "semantic-release -e semantic-release-monorepo"
   },
   "author": "",
   "license": "ISC",
