--- a/packages/other/package.json
+++ b/packages/other/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monorepo-semantic-example/other",
-  "version": "0.0.0-development",
+  "version": "0.0.0",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
