fix: use non-org package names

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@monorepo-semantic-example/core",
+  "name": "monorepo-semantic-release-core",
   "version": "0.0.0",
   "description": "",
   "scripts": {
