--- a/packages/other/package.json
+++ b/packages/other/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@monorepo-semantic-example/other",
+  "name": "monorepo-semantic-release-other",
   "version": "0.0.0",
   "description": "",
   "scripts": {
