--- a/packages/other/package.json
+++ b/packages/other/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "update": "update only one"
   }
 }
